--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/samples": "~36.0.0",
     "@expo/vector-icons": "~10.0.0",
+    "@react-native-community/datetimepicker": "^2.2.3",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "base-64": "^0.1.0",
     "expo": "~36.0.0",
@@ -24,6 +25,7 @@
     "expo-web-browser": "~8.0.0",
     "firebase": "^7.9.0",
     "firebase-functions": "^3.3.0",
+    "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
