--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-image-picker": "~8.0.1",
+    "expo-location": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "expo-web-browser": "~8.0.0",
-    "firebase": "^7.9.0",
+    "firebase": "^7.12.0",
     "firebase-functions": "^3.3.0",
+    "firebase-tools": "^7.16.1",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -38,9 +41,7 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "~4.0.10",
     "react-navigation-stack": "~1.10.3",
-    "react-navigation-tabs": "~2.6.2",
-    "expo-location": "~8.0.0",
-    "expo-permissions": "~8.0.0"
+    "react-navigation-tabs": "~2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
