--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@expo/samples": "~36.0.0",
     "@expo/vector-icons": "~10.0.0",
-    "@react-native-community/datetimepicker": "^2.2.3",
+    "@react-native-community/datetimepicker": "^2.3.1",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "base-64": "^0.1.0",
     "expo": "~36.0.0",
@@ -22,6 +22,8 @@
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-image-picker": "~8.0.1",
+    "expo-location": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "expo-web-browser": "~8.0.0",
     "firebase": "^7.9.0",
     "firebase-functions": "^3.3.0",
@@ -29,6 +31,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-maps": "^0.27.1",
@@ -38,9 +41,7 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "~4.0.10",
     "react-navigation-stack": "~1.10.3",
-    "react-navigation-tabs": "~2.6.2",
-    "expo-location": "~8.0.0",
-    "expo-permissions": "~8.0.0"
+    "react-navigation-tabs": "~2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
