--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-maps": "^0.27.1",
     "react-native-option-select": "^1.0.4",
+    "react-native-picker-module": "^1.3.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
