--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-picker-module": "^1.3.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-sectioned-multi-select": "^0.7.6",
     "react-native-web": "~0.11.7",
     "react-navigation": "~4.0.10",
     "react-navigation-stack": "~1.10.3",
